--- a/M2.html
+++ b/M2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LV name</title>
+    <title>SITE name</title>
 </head>
 <body>
-    <h1>LV name</h1>
-    <iframe width="560" height="315" src="https://m.ok.ru/video/9379276463690" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1>SITE NAME</h1>
+    <iframe src="https://m.ok.ru/video/9379276463690" width="100%" height="600" frameborder="0"></iframe>
 </body>
 </html>
