--- a/M2.html
+++ b/M2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SITE name</title>
+    <title>View Video</title>
 </head>
 <body>
-    <h1>.</h1>
-    <iframe src="https://m.ok.ru/video/9379276463690" width="100%" height="600" frameborder="0"></iframe>
+    <h1>View Video from OK.ru</h1>
+    <iframe src="https://m.ok.ru/video/9379276463690" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
