--- a/M3.html
+++ b/M3.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SITE name</title>
-</head>
-<body>
-    <h1>SITE NAME</h1>
-    <iframe src="https://m.ok.ru/video/9379276463690" width="100%" height="600" frameborder="0"></iframe>
-</body>
-</html>
+<a href="https://m.ok.ru/video/9379276463690" target="_blank">Watch the Video</a>
