--- a/M2.html
+++ b/M2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Video</title>
+    <title>عرض الفيديو من OK.ru</title>
 </head>
 <body>
-    <h1>View Video from OK.ru</h1>
-    <iframe src="https://m.ok.ru/video/9379276463690" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
+    <h1>شاهد الفيديو مباشرة من OK.ru</h1>
+    <p>الفيديو غير قابل للتضمين، يمكنك مشاهدته مباشرة من <a href="https://m.ok.ru/video/9379276463690" target="_blank">هنا</a>.</p>
 </body>
 </html>
