--- a/M2.html
+++ b/M2.html
@@ -6,7 +6,7 @@
     <title>عرض الفيديو من OK.ru</title>
 </head>
 <body>
-    <h1>شاهد الفيديو مباشرة من OK.ru</h1>
-    <p>الفيديو غير قابل للتضمين، يمكنك مشاهدته مباشرة من <a href="https://m.ok.ru/video/9379276463690" target="_blank">هنا</a>.</p>
+    <h1>عرض الفيديو مباشرة من OK.ru</h1>
+    <iframe src="https://m.ok.ru/video/9379276463690" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
