--- a/M2.html
+++ b/M2.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>عرض الفيديو من OK.ru</title>
+    <script type="text/javascript">
+        window.onload = function() {
+            window.location.href = "https://m.ok.ru/video/9379276463690";
+        };
+    </script>
 </head>
 <body>
-    <h1>عرض الفيديو مباشرة من OK.ru</h1>
-    <iframe src="https://m.ok.ru/video/9379276463690" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
+    <h1>جارٍ تحميل الفيديو...</h1>
 </body>
 </html>
+
