--- a/M2.html
+++ b/M2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عرض الفيديو من OK.ru</title>
+    <title>2M  </title>
     <script type="text/javascript">
         window.onload = function() {
             window.location.href = "https://m.ok.ru/video/9379276463690";
