--- a/M2.html
+++ b/M2.html
@@ -6,7 +6,7 @@
     <title>2M  </title>
     <script type="text/javascript">
         window.onload = function() {
-            window.location.href = "https://m.ok.ru/video/9379276463690";
+            window.location.href = "https://ok.ru/video/9381728558666";
         };
     </script>
 </head>
