--- a/M2.html
+++ b/M2.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2M  </title>
-    <script type="text/javascript">
-        window.onload = function() {
-            window.location.href = "https://m.ok.ru/video/9382206971466";
-        };
-    </script>
-</head>
-<body>
-    <h1>جارٍ تحميل ...</h1>
-</body>
-</html>
+<iframe width="640" height="360" src="https://ok.ru/videoembed/9382206971466?nochat=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
