--- a/Test 3.html
+++ b/Test 3.html
@@ -3,33 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>بث مباشر</title>
+  <title>Embed Website Without Ads</title>
   <style>
-    
-    /* جعل iframe متجاوبًا */
-    .responsive-iframe {
-      position: relative;
-      width: 100%; /* عرض الفيديو يملأ الشاشة بالكامل */
-      padding-top: 56.25%; /* نسبة العرض إلى الارتفاع 16:9 */
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f3f3f3;
     }
-
-    .responsive-iframe iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
+    iframe {
       width: 100%;
-      height: 100%;
+      height: 90vh;
       border: none;
+    }
+    .notice {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 16px;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <div class="responsive-iframe">
-    <iframe 
-      src="https://ok.ru/videoembed/9419576122954?nochat=1" 
-      allow="autoplay; fullscreen" 
-      allowfullscreen>
-    </iframe>
-  </div>
+  <!-- تضمين الموقع -->
+  <iframe id="websiteFrame" src="http://dagav.com/v/arabic/arab1/2m.php#google_vignette"></iframe>
+
+  <!-- رسالة تنبيه -->
+  <div class="notice">قد تم تحسين التجربة وحجب الإعلانات</div>
+
+  <script>
+    // منع ظهور عناصر الإعلانات داخل iframe (إذا سمح الموقع بالوصول)
+    const iframe = document.getElementById("websiteFrame");
+
+    iframe.onload = function() {
+      try {
+        const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+
+        // العثور على العناصر الإعلانية بناءً على ID أو Class وحذفها
+        const ads = iframeDoc.querySelectorAll(".ad, .ads, [id*='ad'], [class*='ad']");
+        ads.forEach(ad => ad.remove());
+
+        console.log("تمت إزالة الإعلانات بنجاح");
+      } catch (error) {
+        console.warn("لا يمكن الوصول إلى محتوى iframe لمنع الإعلانات بسبب إعدادات الأمان.");
+      }
+    };
+  </script>
 </body>
 </html>
