--- a/Test3.html
+++ b/Test3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Embed Website Without Ads</title>
+  <title>2M Live </title>
   <style>
     body {
       margin: 0;
@@ -28,7 +28,7 @@
   <iframe id="websiteFrame" src="http://dagav.com/v/arabic/arab1/2m.php#google_vignette"></iframe>
 
   <!-- رسالة تنبيه -->
-  <div class="notice">قد تم تحسين التجربة وحجب الإعلانات</div>
+  <div class="notice">Live</div>
 
   <script>
     // منع ظهور عناصر الإعلانات داخل iframe (إذا سمح الموقع بالوصول)
