--- a/Test3.html
+++ b/Test3.html
@@ -25,18 +25,9 @@
 </head>
 <body>
   <!-- تضمين الموقع -->
-  <iframe id="websiteFrame" src="" loading="lazy"></iframe>
+  <iframe id="websiteFrame" src="http://dagav.com/v/arabic/arab1/2m.php" loading="lazy"></iframe>
 
   <!-- رسالة تنبيه -->
   <div class="notice">Live</div>
-
-  <script>
-    // رابط البث المتغير
-    const liveStreamUrl = "http://dagav.com/v/arabic/arab1/2m.php"; // تحديث الرابط إذا تغير
-
-    // تحديث مصدر الـ iframe
-    const iframe = document.getElementById("websiteFrame");
-    iframe.src = liveStreamUrl;
-  </script>
 </body>
 </html>
