--- a/Test3.html
+++ b/Test3.html
@@ -3,31 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2M Live</title>
+  <title>Live Stream</title>
+  <link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #f3f3f3;
     }
-    iframe {
+    #video-container {
       width: 100%;
       height: 90vh;
-      border: none;
-    }
-    .notice {
-      text-align: center;
-      margin-top: 10px;
-      font-size: 16px;
-      color: #666;
     }
   </style>
 </head>
 <body>
-  <!-- تضمين الموقع -->
-  <iframe id="websiteFrame" src="http://dagav.com/v/arabic/arab1/2m.php" loading="lazy"></iframe>
+  <div id="video-container">
+    <video id="my-video" class="video-js vjs-default-skin" controls>
+      <source src="http://path_to_your_hls_stream.m3u8" type="application/x-mpegURL">
+    </video>
+  </div>
 
-  <!-- رسالة تنبيه -->
-  <div class="notice">Live</div>
+  <script src="https://vjs.zencdn.net/7.15.4/video.min.js"></script>
+  <script>
+    var player = videojs('my-video');
+  </script>
 </body>
 </html>
