--- a/Test3.html
+++ b/Test3.html
@@ -3,30 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live Stream</title>
-  <link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet">
+  <title>2M Live</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #f3f3f3;
     }
-    #video-container {
+    iframe {
       width: 100%;
       height: 90vh;
+      border: none;
+    }
+    .notice {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 16px;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <div id="video-container">
-    <video id="my-video" class="video-js vjs-default-skin" controls>
-      <source src="http://path_to_your_hls_stream.m3u8" type="application/x-mpegURL">
-    </video>
-  </div>
+  <!-- تضمين الموقع -->
+  <iframe id="websiteFrame" src="http://azrotv.com/iphone/arabic/ch6/2mdirect.php" loading="lazy"></iframe>
 
-  <script src="https://vjs.zencdn.net/7.15.4/video.min.js"></script>
+  <!-- رسالة تنبيه -->
+  <div class="notice">Live</div>
+
   <script>
-    var player = videojs('my-video');
+    // منع ظهور عناصر الإعلانات داخل iframe (إذا سمح الموقع بالوصول)
+    const iframe = document.getElementById("websiteFrame");
+
+    iframe.onload = function() {
+      // هذا الكود قد لا يعمل بسبب قيود CORS أو سياسة الأمان للموقع المضمن
+      try {
+        const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+
+        // العثور على العناصر الإعلانية بناءً على ID أو Class وحذفها
+        const ads = iframeDoc.querySelectorAll(".ad, .ads, [id*='ad'], [class*='ad']");
+        ads.forEach(ad => ad.remove());
+
+        console.log("تمت إزالة الإعلانات بنجاح");
+      } catch (error) {
+        console.warn("لا يمكن الوصول إلى محتوى iframe لمنع الإعلانات بسبب إعدادات الأمان.");
+      }
+    };
   </script>
 </body>
 </html>
