--- a/Test3.html
+++ b/Test3.html
@@ -3,33 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>بث مباشر</title>
+  <title>Live Stream</title>
   <style>
-    
-    /* جعل iframe متجاوبًا */
-    .responsive-iframe {
-      position: relative;
-      width: 100%; /* عرض الفيديو يملأ الشاشة بالكامل */
-      padding-top: 56.25%; /* نسبة العرض إلى الارتفاع 16:9 */
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f3f3f3;
     }
-
-    .responsive-iframe iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
+    iframe {
       width: 100%;
-      height: 100%;
+      height: 90vh;
       border: none;
+    }
+    .notice {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 16px;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <div class="responsive-iframe">
-    <iframe 
-      src="http://dagav.com/v/arabic/arab1/2m.php" 
-      allow="autoplay; fullscreen" 
-      allowfullscreen>
-    </iframe>
-  </div>
+  <!-- تضمين الموقع داخل iframe -->
+  <iframe src="https://dagav.com/v/arabic/arab1/2m.php" loading="lazy"></iframe>
+
+  <!-- رسالة تنبيه -->
+  <div class="notice">Live Stream</div>
 </body>
 </html>
