--- a/Test3.html
+++ b/Test3.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <!-- تضمين الموقع داخل iframe -->
-  <iframe src="www.dagav.com/v/arabic/arab1/2m.php" loading="lazy"></iframe>
+  <iframe src="https://dagav.com/v/arabic/arab1/2m.php" loading="lazy"></iframe>
 
   <!-- رسالة تنبيه -->
   <div class="notice">Live Stream</div>
