--- a/Test3.html
+++ b/Test3.html
@@ -12,7 +12,7 @@
     }
     iframe {
       width: 100%;
-      height: 90vh;
+      height: 90vh;  /* يحدد الارتفاع ليشمل معظم الصفحة */
       border: none;
     }
     .notice {
@@ -25,7 +25,7 @@
 </head>
 <body>
   <!-- تضمين الموقع داخل iframe -->
-  <iframe src="https://dagav.com/v/arabic/arab1/2m.php" loading="lazy"></iframe>
+  <iframe src="http://www.dagav.com/v/arabic/arab1/2m.php" loading="lazy"></iframe>
 
   <!-- رسالة تنبيه -->
   <div class="notice">Live Stream</div>
