--- a/Test3.html
+++ b/Test3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>تضمين الموقع باستخدام iframe</h1>
-    <iframe src="https://dagav.com/v/arabic/arab1/2m.php" width="100%" height="600px" frameborder="0">
+    <iframe src="http://dagav.com/v/arabic/arab1/2m.php" width="100%" height="600px" frameborder="0">
         متصفحك لا يدعم عرض iframe.
     </iframe>
 </body>
