--- a/Test3.html
+++ b/Test3.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-    <iframe id="embeddedSite" src="https://livetv.aflam4you.pro/2m-live-maroc-watch-now_8.html"></iframe>
+    <iframe id="embeddedSite" src="https://www.elahmad.com/tv/live/shahid_shaka.php?id=2mmonde"></iframe>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
