--- a/Test3.html
+++ b/Test3.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<iframe width="560" height="315" src="http://www.elahmad.com/tv/arabic-tv-online.php?id=arryadia" style="border:none;" allowfullscreen allow="autoplay; fullscreen; picture-in-picture; xr-spatial-tracking; encrypted-media"></iframe>
+<iframe width="560" height="315" src="https://www.elahmad.com/tv/arabic-tv-online.php?id=arryadia" style="border:none;" allowfullscreen allow="autoplay; fullscreen; picture-in-picture; xr-spatial-tracking; encrypted-media"></iframe>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
