--- a/ifarm.html
+++ b/ifarm.html
@@ -6,6 +6,7 @@
 
 <iframe id="myIframe" 
         src="https://www.elahmad.com/tv/arabic-tv-online.php?id=arryadia"
+        allow="autoplay"
         width="100%" height="1000px" frameborder="0" allowfullscreen>
 </iframe>
 
