--- a/ifarm.html
+++ b/ifarm.html
@@ -6,7 +6,8 @@
 
 <iframe id="myIframe" 
         src="https://www.elahmad.com/tv/arabic-tv-online.php?id=arryadia"
-        
+        sandbox="allow-scripts allow-same-origin allow-popups allow-forms allow-modals"
+        allow="autoplay"
         width="100%" height="1000px" frameborder="0" allowfullscreen>
 </iframe>
 
