--- a/ifarm.html
+++ b/ifarm.html
@@ -1,4 +1,12 @@
-
-<!DOCTYPE html>   
- <iframe width="100%" height="1000px" src="http://www.elahmad.com/tv/arabic-tv-online.php?id=arryadia" style="border:none;" allowfullscreen allow="autoplay; fullscreen; picture-in-picture; xr-spatial-tracking; encrypted-media"></iframe>    
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>عرض القناة</title>
+</head>
+<body>
+    <iframe width="100%" height="1000px" src="http://www.elahmad.com/tv/arabic-tv-online.php?id=arryadia" style="border:none;" allowfullscreen allow="autoplay; fullscreen; picture-in-picture; xr-spatial-tracking; encrypted-media"></iframe>
+</body>
+</html>
                                                                                                                                                                                                            
