--- a/AFLM.html
+++ b/AFLM.html
@@ -35,8 +35,7 @@
       document.title = url
     }
 }
-playM3u8 ("
-https://fl1002.bozztv.com/ga-aflamtv7/tracks-v1a1/mono.ts.m3u8");
+playM3u8 ("https://fl1002.bozztv.com/ga-aflamtv7/tracks-v1a1/mono.ts.m3u8");
 </script>
 </body>
 </html>
